@@ -4,6 +4,7 @@ PHP                                                                        NEWS
 - Fixed bug #35278 (Multiple virtual() calls crash Apache 2 php module). (Ilia)
 - Fixed bug #35273 (Error in mapping soap - java types). (Dmitry)
 - Fixed bug #33153 (crash in mssql_next result). (Frank)
+- Fixed bug #32009 (crash when mssql_bind() is called more than once). (Frank)
 
 17 Nov 2005, PHP 5.1 Release Candidate 6
 - Changed function parameter parsing to handle integers in a non-strict fashion
